2007-05-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Eliminate maximum_drivers configuration parameter
	since it was used to configure a no longer used feature. Device names
	are now part of the filesystem not in a table.

2007-05-15	Ray Xu <rayx@gmail.com>

	* Makefile.am: Add abort.rel since it is now in the BSP shared source,
	not in score/cpu.

2007-04-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove qrtems_debug.

2007-03-11	Joel Sherrill <joel@OARcorp.com>

	* startup/bspstart.c: Remove assignments of
	Cpu_table.do_zero_of_workspace to TRUE since TRUE is the default
	value in boot_card.c

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-11-15	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am: Merge c_rtems_main() into boot_card(). This eliminated a
	file and simplified initialization.

2006-11-01	Joel Sherrill <joel@OARcorp.com>

	* bsp_specs: Fix typo.

2006-10-30	Joel Sherrill <joel@OARcorp.com>

	* bsp_specs: Add crti, crtbegin, crtend, and crtn.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove superfluous -DASM.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.60. Require automake-1.10.

2006-06-02	Jay Monkman

	* irq/bsp_irq_init.c: Changed interrupt handling
	to use shared rtems_irq_connect_data struct.

2006-01-11	Ralf Corsepius <ralf.corsepius@rtems.org>

	* Makefile.am: Add preinstall.am.

2005-10-17	Ralf Corsepius <ralf.corsepius@rtems.org>

	* Makefile.am: Install/preinstall headers from ../../arm/shared.

2005-05-26	Ralf Corsepius <ralf.corsepius@rtems.org>

	* include/bsp.h: New header guard.

2005-05-17      Jennifer Averett <jennifer.averett@oarcorp.com>

        * irq/irq.h: Modified names and types to match rtems/irq.h. 
        Note: rtems/irq.h should be included after the addition of a 
        parameter to ISRs.

2005-04-26	Joel Sherrill <joel@OARcorp.com>
