@@ -1,3 +1,8 @@
+2007-06-22	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* network/network.c: Remove cs8900_get_mac_addr which conflicted with
+	one in libchip AND contained a hard-coded MAC address.
+
 2007-05-28	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* startup/bspstart.c: Eliminate maximum_drivers configuration parameter
